<resources>
    <!-- App Name for App Icon -->
    <string name="app_name">1138 Scouting App</string>

    <!-- Empty String -->
    <string name="empty"></string>

    <!-- App Version -->
    <string name="app_version">26.1.12</string>
    <!-- Undo and Redo Buttons -->
    <string name="undo_title">Undo</string>
        <string name="undo_button_description">Undo last action</string>
    <string name="redo_title">Redo</string>
        <string name="redo_button_description">Redo last action undone</string>

    <!-- Next, Back, and Submit Buttons -->
    <string name="next_button_title">Next</string>
    <string name="back_button_title">Back</string>

    <!-- Pre-Auton Page -->
    <string name="pre_auton_title">Pre-Auton</string>
    <string name="name_prompt_title">Name of Scouter</string>
    <string name="match_number_title">Match Number</string>
        <!-- Team Color Buttons -->
        <string name="team_color_title">Team Color</string>
        <string name="team_color_red">RED</string>
        <string name="team_color_blue">BLUE</string>
    <string name="team_prompt_title">Team Number</string>
    <string name="field_image_desc">Image of field from top-down view.</string>
        <!-- Starting Position Buttons -->
        <string name="start_outpost">Outpost</string>
        <string name="start_middle">Middle</string>
        <string name="start_depot">Depot</string>
    <string name="no_show_title">Team Didn\'t Show Up</string>
    <string name="blue_general_position">Blue Generic</string>
    <string name="red_general_position">Red Generic</string>
    <string name="hamburger_desc">Menu Button</string>
    <string name="menu_connect_title">Connect</string>
    <string name="menu_reset_title">Reset</string>
    <string name="menu_archive_title">Archive</string>
    <string name="menu_practice_title">Practice</string>
    <string name="menu_replay_title">Replay</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_admin_title">Admin</string>

    <!-- Admin Menu -->
    <string name="admin_title">Admin Menu</string>
    <string name="override_title">Manual Override</string>
    <string name="save_close_button">Save and Close</string>

    <!-- Auton Popup -->
    <string name="auton_start_prompt">Press when Auton starts</string>
    <string name="back_button">Back</string>
    <string name="start_button">Start</string>

<!--    <string name=""></string>-->

    <!-- Auton Page -->
    <string name="auton_title">Auton</string>
    <string name="reef_image_desc">Side profile of the reef.</string>
    <string name="button_counter_default">0</string>
    <string name="coral_pickup_title">Coral Pickup:</string>
    <string name="algae_removed_title">Algae Removed:</string>
    <string name="scored_button_title">Scored</string>
    <string name="missed_button_title">Missed</string>
    <string name="processor_button_title">Processor</string>
    <string name="net_button_title">Net</string>
    <string name="leave_checkbox_title">Leave (Taxi):</string>
    <string name="fuel_scored">Fuel Scored:</string>
    <string name="hang_attempted">Hang Started?</string>
    <string name="hang_successful">Hang Successful:</string>

    <string name="collecting_button_auton">Collecting</string>
    <string name="shuttling_button_auton">Shuttling</string>
    <string name="scoring_button_auton">Scoring</string>
    <string name="immobile_button_auton">Immobile</string>
    <string name="outpost_button_auton">Outpost</string>
    <string name="depot_button_auton">Depot</string>

    <string-array name="fuel_scored_auton">
        <item>0</item>
        <item>1–8</item>
        <item>9–15</item>
        <item>16–25</item>
        <item>26–35</item>
        <item>36–50</item>
        <item>50+</item>
    </string-array>

    <!-- Teleop Popup -->
    <string name="teleop_start_prompt">Press when Teleop starts</string>

    <!-- Teleop Page -->
    <string name="teleop_title">Teleop</string>
    <string name="hang_started_title">Hang started:</string>
    <string name="scoring_button_teleop">Scoring</string>
    <string name="collecting_button_teleop">Collecting</string>
    <string name="outpost_button_teleop">Outpost</string>
    <string name="shuttling_button_teleop">Shuttling</string>
    <string name="immobile_button_teleop">Immobile</string>
    <string name="defending_button_teleop">Defending</string>
    <string name="start_teleop_team">First Active Hub:</string>

    <!-- Post Match Page -->
    <string name="post_match_title">Post Match</string>
    <string name="hang_spinner_title">Hang Successful?</string>
    <string name="score_estimate">Score Estimate:</string>
    <string name="hang_failed_title">Hang Failed:</string>
    <string name="hub_accuracy">Hub Accuracy: (%)</string>
    <string name="confidence_estimate">Confidence:</string>
    <string name="red_pos">Red</string>
    <string name="neutral_pos">Neutral</string>
    <string name="blue_pos">Blue</string>

    <string-array name="hang_spinner_options">
        <item>Not Attempted</item>
        <item>L1</item>
        <item>L2</item>
        <item>L3</item>
        <item>Failed</item>
    </string-array>

    <string-array name="score_estimate_array">
        <item>0</item>
        <item>1–25</item>
        <item>26–50</item>
        <item>51–75</item>
        <item>76–100</item>
        <item>101–150</item>
        <item>151–200</item>
        <item>201–250</item>
        <item>250+</item>
    </string-array>

    <!-- Submission Confirmation -->
    <string name="confirm_submit_title">Are you sure you want to submit?</string>
    <string name="confirm_submit_all_title">Are you sure you want to submit ALL ARCHIVED MATCHES?</string>
    <string name="submit_button_title">Submit</string>
    <string name="submit_all_button">Submit All</string>
    <string name="cancel_button_title">Cancel</string>
    <string name="confirm_reset_title">Are you sure you want to reset?</string>
    <string name="confirm_reset_button">Reset</string>
    <string name="confirm_practice_title">Are you sure you want to practice scout this match?</string>
    <string name="confirm_practice_button">Practice</string>
    <string name="confirm_replay_title">Are you sure you want to make this match a replay?</string>
    <string name="confirm_replay_button">Replay</string>

    <!-- Bluetooth -->
    <string name="connected_status_title">Connected</string>
    <string name="disconnected_status_title">Disconnected</string>
    <string name="archive_title">Menu</string>
    <string name="qr_code_title">QR-Code</string>
    <string name="qr_code_error">Bluetooth\nNot Connected</string>

    <!-- Admin -->
    <string name="compids_title">Competition ID:</string>
    <array name="compids_array">
        <item>2026capoh</item>
        <item>2026casac</item>
    </array>

    <!--  Settings  -->
    <string name="settings_title">Settings</string>
    <string name="field_orientation_title">Field Orientation:</string>
    <string name="flip_button">Flip</string>
    <string name="handedness_title">Hand:</string>
    <string name="left_title">Left</string>
    <string name="right_title">Right</string>
    <string name="close_settings">Close</string>
</resources>
