<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_default"
    android:clickable="true"
    tools:context=".fragments.TeleopFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <CheckBox
            android:id="@+id/hang_attempted_checkbox"
            android:layout_width="110sp"
            android:layout_height="110sp"
            android:layout_marginEnd="15dp"
            android:background="?android:attr/listChoiceIndicatorMultiple"
            android:backgroundTint="@color/orange_button_toggle"
            android:button="@null"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@+id/hang_attempted"
            app:layout_constraintEnd_toEndOf="@+id/defending_button_teleop"
            app:layout_constraintStart_toEndOf="@+id/hang_attempted"
            app:layout_constraintTop_toTopOf="@+id/hang_attempted"
            app:layout_constraintVertical_bias="0.50" />

        <Button
            android:id="@+id/collecting_button_teleop"
            android:layout_width="240sp"
            android:layout_height="100sp"
            android:layout_marginStart="20dp"
            android:text="@string/collecting_button_teleop"
            android:textColor="@color/background_default"
            android:textSize="38sp"
            android:backgroundTint="@color/orange_button_toggle"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/shuttling_button_teleop" />

        <Button
            android:id="@+id/immobile_button_teleop"
            android:layout_width="240sp"
            android:layout_height="100sp"
            android:layout_marginTop="30dp"
            android:text="@string/immobile_button_teleop"
            android:textColor="@color/background_default"
            android:textSize="38sp"
            android:backgroundTint="@color/orange_button_toggle"
            app:layout_constraintEnd_toEndOf="@+id/shuttling_button_teleop"
            app:layout_constraintTop_toBottomOf="@+id/shuttling_button_teleop" />

        <Button
            android:id="@+id/scoring_button_teleop"
            android:layout_width="240sp"
            android:layout_height="100sp"
            android:text="@string/scoring_button_teleop"
            android:textColor="@color/background_default"
            android:textSize="38sp"
            android:backgroundTint="@color/orange_button_toggle"
            app:layout_constraintStart_toStartOf="@+id/collecting_button_teleop"
            app:layout_constraintTop_toTopOf="@+id/immobile_button_teleop" />

        <Button
            android:id="@+id/defending_button_teleop"
            android:layout_width="240sp"
            android:layout_height="100sp"
            android:layout_marginTop="30dp"
            android:text="@string/defending_button_teleop"
            android:textColor="@color/background_default"
            android:textSize="38sp"
            android:backgroundTint="@color/orange_button_toggle"
            app:layout_constraintEnd_toEndOf="@+id/immobile_button_teleop"
            app:layout_constraintTop_toBottomOf="@+id/immobile_button_teleop" />

        <Button
            android:id="@+id/outpost_button_teleop"
            android:layout_width="240sp"
            android:layout_height="100sp"
            android:text="@string/outpost_button_teleop"
            android:textColor="@color/background_default"
            android:textSize="38sp"
            android:backgroundTint="@color/orange_button_toggle"
            app:layout_constraintStart_toStartOf="@+id/scoring_button_teleop"
            app:layout_constraintTop_toTopOf="@+id/defending_button_teleop" />

        <Button
            android:id="@+id/shuttling_button_teleop"
            android:layout_width="240sp"
            android:layout_height="100sp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="20dp"
            android:text="@string/shuttling_button_teleop"
            android:textColor="@color/background_default"
            android:textSize="38sp"
            android:backgroundTint="@color/orange_button_toggle"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <RadioGroup
            android:id="@+id/team_start_teleop"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginEnd="-20dp"
            android:background="@drawable/toggle_background"
            android:orientation="horizontal"
            android:checkedButton = "@+id/team_blue_teleop"
            app:layout_constraintBottom_toTopOf="@+id/shuttling_button_teleop"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/locationTeleop">

            <RadioButton
                android:id="@+id/team_blue_teleop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_background_red"
                android:button="@null"
                android:gravity="center"
                android:text="@string/team_color_red"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/team_red_teleop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_background_blue"
                android:button="@null"
                android:gravity="center"
                android:text="@string/team_color_blue"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:src="@drawable/frcfield"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

        <TextView
            android:id="@+id/hang_attempted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/hang_attempted"
            android:textColor="@color/off_white"
            android:textSize="45sp"
            app:layout_constraintBottom_toTopOf="@+id/nextButton"
            app:layout_constraintStart_toStartOf="@+id/outpost_button_teleop"
            app:layout_constraintTop_toBottomOf="@+id/defending_button_teleop" />

        <TextView
            android:id="@+id/start_teleop_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-20dp"
            android:text="@string/start_teleop_team"
            android:textColor="@color/off_white"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/collecting_button_teleop"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/locationTeleop" />

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teleop_title"
            android:textColor="@color/off_white"
            android:textSize="96sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/teamNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/off_white"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@+id/redoButton"
            app:layout_constraintEnd_toStartOf="@+id/redoButton"
            app:layout_constraintStart_toEndOf="@+id/mainTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/undoButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/invisible"
            android:contentDescription="@string/undo_button_description"
            android:src="@drawable/undo_arrow_outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/orange_button_toggle" />

        <TextView
            android:id="@+id/undo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undo_title"
            android:textColor="@color/chaminade_orange"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/undoButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/undoButton" />

        <ImageButton
            android:id="@+id/redoButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/invisible"
            android:contentDescription="@string/redo_button_description"
            android:cropToPadding="false"
            android:src="@drawable/redo_arrow_outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/orange_button_toggle" />

        <TextView
            android:id="@+id/redo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redo_title"
            android:textColor="@color/chaminade_orange"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/redoButton"
            app:layout_constraintTop_toBottomOf="@+id/redoButton" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="240sp"
            android:layout_height="110sp"
            android:backgroundTint="@color/chaminade_orange"
            android:text="@string/next_button_title"
            android:textColor="@color/background_default"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="240sp"
            android:layout_height="110sp"
            android:backgroundTint="@color/chaminade_orange"
            android:text="@string/back_button_title"
            android:textColor="@color/background_default"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/locationTeleop"
            android:layout_width="441dp"
            android:layout_height="216dp"
            android:background="@color/invisible"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/mainTitle">

            <RadioButton
                android:id="@+id/red_auton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/start_toggle_red"
                android:button="@null"
                android:gravity="center"
                android:text="@string/red_auton"
                android:textColor="@color/red_text_toggle"
                android:textSize="36sp" />

            <RadioButton
                android:id="@+id/middle_auton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/start_toggle_blue_white"
                android:button="@null"
                android:gravity="center"
                android:text="@string/middle_auton"
                android:textColor="@color/blue_white_text_toggle"
                android:textSize="36sp" />

            <RadioButton
                android:id="@+id/blue_auton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/start_toggle_blue"
                android:button="@null"
                android:gravity="center"
                android:text="@string/blue_auton"
                android:textColor="@color/blue_text_toggle"
                android:textSize="36sp" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
